rooms.roomCreateFailed added (#6)
* rooms.roomCreateFailed added

* Resolved an error

--- a/Language/lld_VB.json
+++ b/Language/lld_VB.json
@@ -60,7 +60,8 @@
       "roomCreated": "Le tü canal é sté cherié!",
       "roomDeleted": "Le tü canal é sté tut demez!",
       "roomDeleteNoRoom": "Al n'é sté ciafé degun canal da tó demez. Es zigü ch' al ne sides un pur {1}?",
-      "roomSummonErrorExiting": "Te ne pos nia cherié n canal sëgn, al pó ester ch' nen as bele un."
+      "roomSummonErrorExiting": "Te ne pos nia cherié n canal sëgn, al pó ester ch' nen as bele un.",
+      "roomCreateFailed": "Valch é jü stort intratan la creaziun dl canal."
     }
   }
 }
