room lock/unlock strings

--- a/Language/en_US.json
+++ b/Language/en_US.json
@@ -74,9 +74,13 @@
 
 			"noRoomAvailable": "You don't have a room. Summon one before trying again.",
 
+			"roomLocked": "Room was locked.",
+			"roomUnlocked": "Room was unlocked.",
+
 			"noChannelsEnabled": "You can't summon a room right now because no channel types are enabled.",
 			"roomSummonErrorExiting": "You cannot create a room at this time, You most likely already have one.",
-			"roomDeleteNoRoom": "Could not find a room to delete. Are you sure there is one for {1}?"
+			"roomDeleteNoRoom": "Could not find a room to delete. Are you sure there is one for {1}?",
+			"noRoom": "{1} Doesn't seem to have a room, Are you sure it exists?"
 
 		},
 		
