--- a/Language/lld_VB.json
+++ b/Language/lld_VB.json
@@ -62,6 +62,8 @@
       "roomDeleteNoRoom": "Al n'é sté ciafé degun canal da tó demez. Es zigü ch' al ne sides un pur {1}?",
       "roomSummonErrorExiting": "Te ne pos nia cherié n canal sëgn, al pó ester ch' nen as bele un.",
       "roomCreateFailed": "Valch é jü stort intratan la creaziun dl canal."
+      "roomLocked": "Canal é sté bloché.",
+			"roomUnlocked": "Canal é sté desbloché.",
     }
   }
 }
