--- a/Language/lld_VB.json
+++ b/Language/lld_VB.json
@@ -3,7 +3,7 @@
     "maintainers": [
       "SpeckyYT#6289"
     ],
-    "name": "Ladin (VB)",
+    "name": "Ladin (VB) AYAYA",
     "short": "lld_VB",
     "versionFormat": 4
   },
