--- a/Language/it_IT.json
+++ b/Language/it_IT.json
@@ -70,8 +70,8 @@
          "RECIPIENT_ADD":"Membro é stato aggiunto al GroupDM",
          "RECIPIENT_REMOVE":"Membro é stato rimosso dal GroupDM",
          "CALL":"Call",
-         "CHANNEL_NAME_CHANGE":"Il nome del Canale del GroupDM é stato cambiato",
-         "CHANNEL_ICON_CHANGE":"L'icona del Canale del GroupDM é stato cambiato",
+         "CHANNEL_NAME_CHANGE":"Il nome del canale del GroupDM é stato cambiato",
+         "CHANNEL_ICON_CHANGE":"L'icona del canale del GroupDM é stato cambiato",
          "CHANNEL_PINNED_MESSAGE":"Un messaggio é stato fissato",
          "GUILD_MEMBER_JOIN":"Membro é entrato nel server",
          "USER_PREMIUM_GUILD_SUBSCRIPTION":"Membro ha boostato il server",
