--- a/Language/es_ES.json
+++ b/Language/es_ES.json
@@ -125,7 +125,7 @@
 
 			"DISABLED": "Desactivado",
 			"MEMBERS_WITHOUT_ROLES": "Miembros sin roles",
-			"ALL_MEMBERS": "Todos los miembros
+			"ALL_MEMBERS": "Todos los miembros"
 
 		},
 
