--- a/Language/es_ES.json
+++ b/Language/es_ES.json
@@ -4,7 +4,7 @@
 	
 		"name":				"Español (ES)",
 		"short":       		"es_ES",
-		"maintainers":		["Nioxed#0404"],
+		"maintainers":		["MeLlamanHokage#6774"],
 
 		"versionFormat":	4
 	
